--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyABS7u16czN8NDZXjUaXo2ImM5oY081P08"/>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
