--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,4 +3,5 @@ rootProject.name = 'react_native_navigation_bootstrap'
 include ':app'
 include ':react-native-navigation'
 project(':react-native-navigation').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-navigation/android/app/')
-
+include ':react-native-maps'
+project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/lib/android')
