--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native": "0.42.0",
     "react": "15.4.2",
+    "react-native": "0.42.0",
+    "react-native-maps": "^0.14.0",
     "react-native-navigation": "next"
   }
 }
