--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-maps": "^0.14.0",
-    "react-native-navigation": "next"
+    "react-native-navigation": "next",
+    "react-redux": "^5.0.4"
+  },
+  "devDependencies": {
+    "redux": "^3.6.0"
   }
 }
