--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-native": "0.42.0",
     "react-native-maps": "^0.14.0",
     "react-native-navigation": "next",
-    "react-redux": "^5.0.4"
+    "react-redux": "^5.0.4",
+    "redux-observable": "^0.14.1",
+    "rxjs": "^5.3.0"
   },
   "devDependencies": {
     "redux": "^3.6.0"
